# WPN114-time

./: .gitmodules  CMakeLists.txt  README.md  qml_plugin.cpp  qml_plugin.hpp  wpn114-time.pri  wpn114-time.pro
cmake/: FindWPN114.cmake
examples/simple/: CMakeLists.txt  main.qml
qml/: qmldir  time.qmltypes
source/: time.cpp  time.hpp
